--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
 }
 h1{
     font-size: 50px;
+}
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
 }
 .name-color{
     color: orange;
@@ -15,4 +22,53 @@ h1{
 }
 .half img{
     width: 100%;
+}
+.top-banner{
+    background-repeat: no-repeat;
+    background-image: url("images/top-banner.png");
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg,lightsalmon,tomato);
+    padding: 10px 15px;
+    border-radius: 8px;
+    font-weight: bold;
+    color: white;
+}
+.dream{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.org{
+    color: orange;
+}
+.box{
+    box-shadow: 10px 10px 40px gray;
+    height: 340px;
+    background-color: white;
+}
+.area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+   
+#full{
+    border-left: 7px solid;
+    border-image: linear-gradient(lightsalmon ,tomato);
+    border-image-slice: 1;
+}
+#baby{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+.saddam{
+    text-align: center;
+    font-size: 15px;
 }
